fix(50): revise plan 50-03 based on checker feedback

--- a/.planning/phases/50-svg-generator-library/50-03-PLAN.md
+++ b/.planning/phases/50-svg-generator-library/50-03-PLAN.md
@@ -41,6 +41,10 @@ must_haves:
       to: "d3-contour"
       via: "npm dependency for marching squares contour generation"
       pattern: "import.*from.*d3-contour"
+    - from: "src/lib/eda/svg-generators/contour-plot.ts"
+      to: "src/lib/eda/svg-generators/plot-base.ts"
+      via: "uses PALETTE CSS variable constants for contour band fills (no hardcoded hex colors)"
+      pattern: "PALETTE\\.data"
     - from: "src/lib/eda/svg-generators/composite-plot.ts"
       to: "src/lib/eda/svg-generators/histogram.ts"
       via: "imports generateHistogram for 4-plot sub-panel"
@@ -108,7 +112,7 @@ Output: 4 new TypeScript files + d3-contour dependency + datasets.ts update + fu
 ```bash
 npm install d3-contour@^4.0.2
 ```
-This is the only new npm dependency for Phase 50 (~4KB, pure computation, marching squares algorithm for contour generation).
+This is the only new npm dependency for Phase 50 (~4KB, pure computation, marching squares algorithm for contour generation). Do NOT install d3-interpolate -- it is not needed.
 
 **Update `src/data/eda/datasets.ts`** — add a 2D response surface grid for contour plot testing:
 
@@ -141,11 +145,18 @@ Generate the 400 values using the polynomial formula with small random noise (us
    - Import `contours` from `d3-contour`. Create contour generator: `contours().size([grid.width, grid.height]).thresholds(thresholds)`
    - Call `contoursGen(grid.values)` to get GeoJSON MultiPolygon features with threshold values
    - Use `d3-scale` scaleLinear to map grid coordinates to SVG plot area coordinates
-   - Use `d3-scale` scaleSequential with `d3-interpolate` `interpolateRgbBasis` to create a color scale from PALETTE.dataSecondary (low values) through PALETTE.surface (mid) to PALETTE.dataPrimary (high values). Since we need CSS-var-free colors for the interpolation, use the actual hex values: `['#006d6d', '#fffaf7', '#c44b20']` for light mode. Wrap each contour path in a `<g>` with `class="contour-fill"` so dark mode can be handled via CSS if needed
+
+   **CRITICAL — Contour band coloring must use PALETTE CSS variables, NOT hardcoded hex colors (SVG-13 compliance):**
+   - Do NOT use `d3-interpolate` or `interpolateRgbBasis`. Do NOT use hardcoded hex values like `#006d6d`, `#fffaf7`, `#c44b20`.
+   - Instead, use a quantized opacity approach with PALETTE constants:
+     - Normalize each contour level's threshold value to a 0-1 range: `t = (threshold - minVal) / (maxVal - minVal)`
+     - For low t values (0-0.5): fill with `PALETTE.dataSecondary` at opacity `0.15 + (1 - t * 2) * 0.55` (stronger teal at lowest, fading toward midpoint)
+     - For high t values (0.5-1.0): fill with `PALETTE.dataPrimary` at opacity `0.15 + (t - 0.5) * 2 * 0.55` (fading from midpoint, stronger orange at highest)
+     - This produces a diverging colormap from teal (low) through transparent (mid) to orange (high) that automatically adapts to dark/light themes via CSS variables
    - For each contour level, convert the GeoJSON coordinates to SVG path data. Scale coordinates: `xSvg = margin.left + (geoX / grid.width) * innerWidth`, `ySvg = margin.top + (1 - geoY / grid.height) * innerHeight` (flip Y)
-   - Render filled contour bands as `<path>` with the color scale fill and 0.7 opacity
+   - Render filled contour bands as `<path>` with the PALETTE-based fill and computed opacity
    - Render contour lines (outlines) as `<path>` with PALETTE.textSecondary stroke, 0.5px
-   - Add color legend: small rectangles at the right side showing the threshold-to-color mapping
+   - Add color legend: small rectangles at the right side. Use the same PALETTE fill + opacity scheme for legend swatches. Add threshold value labels using PALETTE.textSecondary
    - Grid lines, axes, title. Use wider right margin (50px instead of 20px) to accommodate legend
 
 **Create `src/lib/eda/svg-generators/distribution-curve.ts`** (SVG-11):
@@ -196,6 +207,13 @@ Generate the 400 values using the polynomial formula with small random noise (us
       if (!contour.includes('<svg') || !contour.includes('viewBox')) throw new Error('Invalid contour SVG');
       if (!contour.includes('<path')) throw new Error('Contour missing path elements');
 
+      // SVG-13 check: contour must NOT contain hardcoded hex fills
+      const hexFillMatch = contour.match(/fill=\"#[0-9a-fA-F]{3,8}\"/g);
+      if (hexFillMatch) throw new Error('Contour has hardcoded hex fill(s): ' + hexFillMatch.join(', ') + ' -- violates SVG-13');
+
+      // SVG-13 check: contour must use CSS variable references for fills
+      if (!contour.includes('var(--color')) throw new Error('Contour not using CSS variable references');
+
       // Distribution curves - test the 3 required distributions (normal, exponential, chi-square)
       const normalPdf = generateDistributionCurve({ type: 'pdf', distribution: 'normal', params: { mu: 0, sigma: 1 }, title: 'Standard Normal PDF' });
       const normalCdf = generateDistributionCurve({ type: 'cdf', distribution: 'normal', params: { mu: 0, sigma: 1 }, title: 'Standard Normal CDF' });
@@ -215,13 +233,14 @@ Generate the 400 values using the polynomial formula with small random noise (us
         if (s.includes('NaN')) throw new Error(n + ' contains NaN');
       }
 
-      console.log('PASS: contour (' + contour.length + '), 3 required dist curves + 3 additional verified');
+      console.log('PASS: contour (' + contour.length + '), 3 required dist curves + 3 additional verified, no hardcoded hex fills in contour');
     "</automated>
   </verify>
   <done>
-    - d3-contour@^4.0.2 installed as npm dependency
+    - d3-contour@^4.0.2 installed as npm dependency (d3-interpolate NOT needed)
     - responseSurface dataset added to datasets.ts (20x20 grid with polynomial response model)
-    - generateContourPlot produces valid SVG with filled contour bands and isolines from response surface data (SVG-08)
+    - generateContourPlot produces valid SVG with filled contour bands using PALETTE CSS variables at varying opacity levels (SVG-08, SVG-13 compliant)
+    - Contour fills use quantized opacity with PALETTE.dataSecondary (low) and PALETTE.dataPrimary (high) -- no hardcoded hex colors
     - generateDistributionCurve produces valid PDF and CDF curves for all 6 distributions: normal, exponential, chi-square, uniform, t, gamma (SVG-11)
     - Success criteria 5 met: normal, exponential, and chi-square all produce correct curves
     - No NaN in any generated SVG
@@ -360,7 +379,7 @@ export { PALETTE, DEFAULT_CONFIG, type PlotConfig } from './plot-base';
     - Full library validation: all 13 generators produce valid SVG from datasets.ts data with no NaN
     - All SVGs use viewBox (SVG-12) and CSS variables (SVG-13)
     - d3-contour installed and used by contour-plot.ts (SVG-08)
-    - Phase 50 complete: 15 SVG requirements satisfied
+    - Phase 50 complete: all 15 SVG requirements satisfied via 13 generator functions + 2 cross-cutting requirements (SVG-12 viewBox, SVG-13 dark/light theme)
   </done>
 </task>
 
@@ -370,10 +389,11 @@ export { PALETTE, DEFAULT_CONFIG, type PlotConfig } from './plot-base';
 1. `npm ls d3-contour` confirms d3-contour@^4.0.2 installed
 2. All 13 generators importable from `src/lib/eda/svg-generators/index.ts`
 3. Every generator produces valid SVG with viewBox, CSS variables, no NaN
-4. 4-plot contains 4 `<g transform>` groups composing sub-generators
-5. 6-plot contains 6 `<g transform>` groups composing sub-generators
-6. Distribution curve works for normal, exponential, chi-square (success criteria 5)
-7. `npm run build` succeeds without errors (no build regression)
+4. Contour plot fills use PALETTE CSS variables with opacity -- no hardcoded hex `fill="#..."` attributes
+5. 4-plot contains 4 `<g transform>` groups composing sub-generators
+6. 6-plot contains 6 `<g transform>` groups composing sub-generators
+7. Distribution curve works for normal, exponential, chi-square (success criteria 5)
+8. `npm run build` succeeds without errors (no build regression)
 </verification>
 
 <success_criteria>
@@ -383,7 +403,7 @@ export { PALETTE, DEFAULT_CONFIG, type PlotConfig } from './plot-base';
 - generate4Plot and generate6Plot correctly compose sub-generators into multi-panel SVG
 - index.ts barrel exports all 13 generators + shared types
 - Complete library validation passes: 13 generators, all valid SVG, no NaN, viewBox-only, CSS-variable-themed
-- Phase 50 success criteria all met (15 generator functions, viewBox responsive, dark/light theme, composite layouts, distribution curves for 3+ distributions)
+- Phase 50 success criteria all met: all 15 SVG requirements satisfied via 13 generator functions + 2 cross-cutting requirements (SVG-12 viewBox, SVG-13 dark/light theme), composite layouts, distribution curves for 3+ distributions
 </success_criteria>
 
 <output>
