fix(51): revise plans based on checker feedback

--- a/.planning/phases/51-graphical-technique-pages/51-01-PLAN.md
+++ b/.planning/phases/51-graphical-technique-pages/51-01-PLAN.md
@@ -222,10 +222,10 @@ Note: The first entry in each variant array IS the default variant. The `renderT
 **Code style:** Follow project conventions -- 2-space indent, single quotes, camelCase functions, SCREAMING_SNAKE for const maps, named exports, explicit return types.
   </action>
   <verify>
-    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npx astro check 2>&1 | tail -10</automated>
+    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npx astro check 2>&1 | tail -10 && node -e "const fs=require('fs'); const f=fs.readFileSync('src/lib/eda/technique-renderer.ts','utf8'); const entries=(f.match(/^\s+'[\w-]+'\s*:/gm)||[]); console.log('TECHNIQUE_RENDERERS entries:', entries.length); console.log(entries.length>=29 ? 'PASS: 29+ slug entries' : 'FAIL: only ' + entries.length + ' entries, need 29');"</automated>
     <manual>Verify technique-renderer.ts exports renderTechniquePlot and renderVariants, has 29 entries in TECHNIQUE_RENDERERS, and 6 entries in VARIANT_RENDERERS</manual>
   </verify>
-  <done>technique-renderer.ts exists with: (1) renderTechniquePlot mapping all 29 graphical slugs to generator calls, (2) 11 composition-based techniques producing valid SVGs via stripSvgWrapper pattern, (3) renderVariants returning labeled variant arrays for all 6 Tier B techniques with distinct statistical patterns, (4) TypeScript compiles without errors</done>
+  <done>technique-renderer.ts exists with: (1) renderTechniquePlot mapping all 29 graphical slugs to generator calls, (2) 11 composition-based techniques producing valid SVGs via stripSvgWrapper pattern, (3) renderVariants returning labeled variant arrays for all 6 Tier B techniques with distinct statistical patterns, (4) TypeScript compiles without errors, (5) automated verify confirms >= 29 entries in TECHNIQUE_RENDERERS</done>
 </task>
 
 </tasks>
@@ -236,13 +236,14 @@ Note: The first entry in each variant array IS the default variant. The `renderT
 3. technique-renderer.ts exports `renderTechniquePlot` and `renderVariants` functions
 4. `renderTechniquePlot('histogram')` returns a non-empty SVG string
 5. `renderVariants('histogram')` returns 8 entries with distinct SVG strings
-6. All 29 graphical slugs from techniques.json have entries in TECHNIQUE_RENDERERS
+6. All 29 graphical slugs from techniques.json have entries in TECHNIQUE_RENDERERS (confirmed by automated entry count check)
 </verification>
 
 <success_criteria>
 - PlotVariantSwap.astro is a complete, standalone Astro component with vanilla JS tab switching (~3KB), CSS attribute selectors, and proper ARIA attributes
 - technique-renderer.ts maps all 29 graphical slugs to SVG output, with 11 composition techniques using the stripSvgWrapper pattern and 6 Tier B techniques providing variant datasets with visually distinct statistical patterns
 - Both files pass TypeScript type checking via `npx astro check`
+- Automated verify confirms >= 29 entries in TECHNIQUE_RENDERERS map
 </success_criteria>
 
 <output>
