--- a/.planning/phases/51-graphical-technique-pages/51-03-PLAN.md
+++ b/.planning/phases/51-graphical-technique-pages/51-03-PLAN.md
@@ -17,17 +17,18 @@ must_haves:
     - "Tier B pages show tab-based SVG variant switching"
     - "Every page displays breadcrumb navigation and links to related techniques"
     - "Related technique links use correct category-aware URLs for cross-category references"
-    - "Build-time SVG thumbnails are available for landing page technique cards"
+    - "BreadcrumbJsonLd structured data uses the actual technique slug, not a title-derived slug"
+    - "Thumbnail generator utility exists and produces sized SVG strings for any technique slug (wiring to landing page cards is Phase 54)"
   artifacts:
     - path: "src/pages/eda/techniques/[slug].astro"
       provides: "Dynamic route generating all 29 graphical technique pages"
       contains: "getStaticPaths"
     - path: "src/lib/eda/thumbnail.ts"
-      provides: "Build-time SVG thumbnail generation for technique cards"
+      provides: "Build-time SVG thumbnail generation utility for technique cards"
       exports: ["generateThumbnail"]
     - path: "src/components/eda/TechniquePage.astro"
-      provides: "Updated technique page layout with category-aware related links"
-      contains: "techniqueUrl"
+      provides: "Updated technique page layout with slug prop, category-aware related links, and correct BreadcrumbJsonLd URLs"
+      contains: "slug"
   key_links:
     - from: "src/pages/eda/techniques/[slug].astro"
       to: "src/lib/eda/technique-renderer.ts"
@@ -43,12 +44,16 @@ must_haves:
       pattern: "PlotVariantSwap"
     - from: "src/pages/eda/techniques/[slug].astro"
       to: "src/components/eda/TechniquePage.astro"
-      via: "layout wrapper with named slots"
+      via: "layout wrapper with named slots, passing slug prop"
       pattern: "TechniquePage"
     - from: "src/pages/eda/techniques/[slug].astro"
       to: "astro:content edaTechniques collection"
       via: "getStaticPaths from collection"
       pattern: "getCollection.*edaTechniques"
+    - from: "src/components/eda/TechniquePage.astro"
+      to: "BreadcrumbJsonLd"
+      via: "slug prop used for structured data URL instead of title-derived slug"
+      pattern: "slug.*techniques"
     - from: "src/lib/eda/thumbnail.ts"
       to: "src/lib/eda/technique-renderer.ts"
       via: "calls renderTechniquePlot with thumbnail config"
@@ -56,7 +61,7 @@ must_haves:
 ---
 
 <objective>
-Create the [slug].astro dynamic route file that wires together technique-renderer.ts, technique-content.ts, and PlotVariantSwap.astro to produce all 29 graphical technique pages. Also create thumbnail.ts for landing page SVG thumbnails and fix TechniquePage.astro related technique links to use category-aware URLs.
+Create the [slug].astro dynamic route file that wires together technique-renderer.ts, technique-content.ts, and PlotVariantSwap.astro to produce all 29 graphical technique pages. Also create thumbnail.ts for landing page SVG thumbnails and fix TechniquePage.astro related technique links to use category-aware URLs with correct BreadcrumbJsonLd slug handling.
 
 Purpose: This is the final assembly step that produces the actual 29 pages at /eda/techniques/{slug}/. It follows the established getStaticPaths + collection pattern (like db-compass/[slug].astro) and composes all building blocks from Plans 01 and 02.
 
@@ -85,19 +90,41 @@ Output: 29 live technique pages at build time, plus thumbnail generation utility
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Fix TechniquePage.astro related links to use category-aware URLs and create [slug].astro dynamic route</name>
+  <name>Task 1: Fix TechniquePage.astro (slug prop, BreadcrumbJsonLd, related links) and create [slug].astro dynamic route</name>
   <files>src/components/eda/TechniquePage.astro, src/pages/eda/techniques/[slug].astro</files>
   <action>
-**Part A: Fix TechniquePage.astro related technique links**
+**Part A: Fix TechniquePage.astro — slug prop, BreadcrumbJsonLd bug, and related technique links**
 
-The current TechniquePage.astro hardcodes related technique links to `/eda/techniques/{slug}/`. This is wrong for cross-category references (e.g., a graphical technique linking to a quantitative technique like "autocorrelation"). Update the component:
+The current TechniquePage.astro has two issues:
+1. Related technique links hardcode `/eda/techniques/{slug}/` which is wrong for cross-category references
+2. BreadcrumbJsonLd on line 25 derives the URL from `title.toLowerCase().replace(/\s+/g, '-')` instead of using the actual technique slug — this produces wrong URLs for techniques like "Box-Cox Linearity Plot" (would generate `box-cox-linearity-plot` instead of actual slug `box-cox-linearity`)
 
-1. Add `url` to the relatedTechniques prop type:
+Update the component:
+
+1. Add `slug?: string` to the Props interface:
 ```typescript
-relatedTechniques?: Array<{ slug: string; name: string; url: string }>;
+interface Props {
+  title: string;
+  description: string;
+  category: string;
+  nistSection: string;
+  slug?: string;
+  relatedTechniques?: Array<{ slug: string; name: string; url: string }>;
+  useKatex?: boolean;
+}
 ```
 
-2. Change the related techniques link from:
+2. Destructure `slug` in the frontmatter:
+```typescript
+const { title, description, category, nistSection, slug, relatedTechniques = [], useKatex = false } = Astro.props;
+```
+
+3. Fix BreadcrumbJsonLd URL derivation (line 25) — use actual slug when provided, fall back to title-derived slug for backwards compatibility:
+```astro
+{ name: title, url: `https://patrykgolabek.dev/eda/techniques/${slug ?? title.toLowerCase().replace(/\s+/g, '-')}/` },
+```
+
+4. Change the related techniques link from:
 ```astro
 <a href={`/eda/techniques/${t.slug}/`}>
 ```
@@ -106,7 +133,7 @@ to:
 <a href={t.url}>
 ```
 
-This way the route file passes pre-computed URLs using `techniqueUrl()` from routes.ts, which handles graphical vs. quantitative routing correctly.
+This way the route file passes pre-computed URLs using `techniqueUrl()` from routes.ts, which handles graphical vs. quantitative routing correctly. The `url` field is now part of the relatedTechniques prop type.
 
 **Part B: Create src/pages/eda/techniques/[slug].astro**
 
@@ -154,13 +181,14 @@ const isTierB = technique.tier === 'B';
 const variants = isTierB ? renderVariants(technique.slug) : [];
 ```
 
-**Template:**
+**Template — pass `slug={technique.slug}` to TechniquePage for correct BreadcrumbJsonLd:**
 ```astro
 <TechniquePage
   title={technique.title}
   description={technique.description}
   category="Graphical Techniques"
   nistSection={technique.nistSection}
+  slug={technique.slug}
   relatedTechniques={relatedTechniques}
 >
   <Fragment slot="plot">
@@ -202,6 +230,7 @@ const variants = isTierB ? renderVariants(technique.slug) : [];
 **Key details:**
 - The `allTechMap` includes BOTH graphical AND quantitative techniques so that `relatedTechniques` can cross-reference to quantitative slugs
 - `techniqueUrl(slug, related.category)` generates `/eda/techniques/{slug}/` for graphical and `/eda/quantitative/{slug}/` for quantitative
+- `slug={technique.slug}` is passed to TechniquePage so BreadcrumbJsonLd uses the correct slug
 - Tier B pages use `<PlotVariantSwap variants={variants} />` where variants is the full array including default as first entry
 - Tier A pages render SVG directly via `set:html={plotSvg}`
 - Content sections use consistent heading styles matching the TechniquePage layout
@@ -209,16 +238,16 @@ const variants = isTierB ? renderVariants(technique.slug) : [];
   </action>
   <verify>
     <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npx astro build 2>&1 | tail -20</automated>
-    <manual>Check that build output shows 29 new pages under /eda/techniques/ and total page count increased by 29</manual>
+    <manual>Check that build output shows 29 new pages under /eda/techniques/ and total page count increased by 29. Also verify TechniquePage.astro contains `slug` prop and BreadcrumbJsonLd uses `slug ??` fallback pattern.</manual>
   </verify>
-  <done>All 29 graphical technique pages build successfully at /eda/techniques/{slug}/, with Tier A pages showing static SVG plots and Tier B pages showing PlotVariantSwap with tab-based variant switching. Related technique links use category-aware URLs. Build completes without errors.</done>
+  <done>All 29 graphical technique pages build successfully at /eda/techniques/{slug}/, with Tier A pages showing static SVG plots and Tier B pages showing PlotVariantSwap with tab-based variant switching. Related technique links use category-aware URLs. BreadcrumbJsonLd structured data uses the actual technique slug (not title-derived). Build completes without errors.</done>
 </task>
 
 <task type="auto">
-  <name>Task 2: Create thumbnail.ts for build-time SVG thumbnails on technique cards</name>
+  <name>Task 2: Create thumbnail.ts utility for build-time SVG thumbnails</name>
   <files>src/lib/eda/thumbnail.ts</files>
   <action>
-Create `src/lib/eda/thumbnail.ts` that generates simplified, smaller SVG thumbnails for technique cards on the landing page grid (LAND-05).
+Create `src/lib/eda/thumbnail.ts` that generates simplified, smaller SVG thumbnails for technique cards. This is the LAND-05 thumbnail generator utility -- the wiring to actual landing page cards happens in Phase 54.
 
 **Approach:** Reuse the existing technique-renderer but with a smaller config. The SVG generators accept optional config overrides for dimensions and margins.
 
@@ -247,7 +276,7 @@ export function generateThumbnail(slug: string): string
 - Actually, since all SVGs scale with viewBox, the thumbnail just needs to be RENDERED at a small size on the page via CSS/HTML `width="200" height="140"` -- the SVG content scales automatically
 - So the simplest approach: `generateThumbnail(slug)` returns `renderTechniquePlot(slug)` but with `width="200" height="140"` attributes added to the `<svg>` tag, and `aria-label` added for accessibility
 
-Choose the simplest approach that produces clean, small thumbnails. The landing page (Phase 54) will render these in card grids.
+Choose the simplest approach that produces clean, small thumbnails. The landing page (Phase 54) will call `generateThumbnail(slug)` when rendering technique cards.
 
 **Code style:** 2-space indent, single quotes, named exports.
   </action>
@@ -255,7 +284,7 @@ Choose the simplest approach that produces clean, small thumbnails. The landing 
     <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npx astro check 2>&1 | tail -5</automated>
     <manual>Verify thumbnail.ts exists and exports generateThumbnail function</manual>
   </verify>
-  <done>thumbnail.ts exports generateThumbnail(slug) that produces accessibility-annotated SVG thumbnails sized for technique cards, reusing existing SVG generator output with scaled dimensions for the landing page grid (LAND-05)</done>
+  <done>thumbnail.ts exports generateThumbnail(slug) that produces accessibility-annotated SVG thumbnails sized for technique cards, reusing existing SVG generator output with scaled dimensions. Utility is ready for Phase 54 landing page integration (LAND-05).</done>
 </task>
 
 </tasks>
@@ -267,15 +296,17 @@ Choose the simplest approach that produces clean, small thumbnails. The landing 
 4. A Tier A page (e.g., /eda/techniques/box-plot/) shows inline SVG without tabs
 5. Related technique links on each page use correct URLs (graphical -> /eda/techniques/, quantitative -> /eda/quantitative/)
 6. Every page has breadcrumb navigation (EDA > Graphical Techniques > [Name])
-7. Every page has prose sections (What It Is, When to Use It, How to Interpret, Assumptions)
-8. thumbnail.ts exports generateThumbnail and produces SVG strings
+7. BreadcrumbJsonLd structured data URLs use the actual technique slug, not title-derived slug
+8. Every page has prose sections (What It Is, When to Use It, How to Interpret, Assumptions)
+9. thumbnail.ts exports generateThumbnail and produces SVG strings
 </verification>
 
 <success_criteria>
 - All 29 graphical technique pages render at their defined URLs with build-time SVG plots, 200+ words of prose, and NIST section citations
 - Tier B pages (histogram, scatter, normal-probability, lag, autocorrelation, spectral) display tab-based SVG variant switching via PlotVariantSwap
 - Every technique page displays breadcrumb navigation and links to related techniques with category-aware URLs
-- Build-time SVG thumbnails are available via thumbnail.ts for the Phase 54 landing page
+- BreadcrumbJsonLd structured data uses `slug` prop (not title-derived), producing correct URLs for all techniques
+- Build-time SVG thumbnail utility exists via thumbnail.ts for Phase 54 landing page integration (LAND-05)
 - Build completes without errors and page count increases by 29
 </success_criteria>
 
