fix(53): revise plans based on checker feedback

--- a/.planning/phases/53-distribution-pages-with-d3-explorers/53-01-PLAN.md
+++ b/.planning/phases/53-distribution-pages-with-d3-explorers/53-01-PLAN.md
@@ -82,6 +82,32 @@ export function getXDomain(
 export function isDiscrete(id: string): boolean
 ```
 
+**CRITICAL: Parameter names MUST match src/data/eda/distributions.json exactly.** The [slug].astro page will pass parameters using the `name` field from the JSON. The switch cases in evalDistribution() must destructure using these exact keys:
+
+| Distribution ID | Parameter keys (from JSON) | Default values (from JSON) |
+|---|---|---|
+| `normal` | `mu`, `sigma` | 0, 1 |
+| `uniform` | `a`, `b` | -1, 1 |
+| `cauchy` | `x0`, `gamma` | 0, 1 |
+| `t-distribution` | `nu` | 5 |
+| `f-distribution` | `d1`, `d2` | 5, 10 |
+| `chi-square` | `k` | 5 |
+| `exponential` | `lambda` | 1 |
+| `weibull` | `alpha`, `beta` | 1, 1 |
+| `lognormal` | `mu`, `sigma` | 0, 1 |
+| `fatigue-life` | `alpha`, `beta` | 1, 1 |
+| `gamma` | `alpha`, `beta` | 2, 1 |
+| `double-exponential` | `mu`, `beta` | 0, 1 |
+| `power-normal` | `p` | 1 |
+| `power-lognormal` | `p`, `sigma` | 1, 1 |
+| `tukey-lambda` | `lambda` | 0.14 |
+| `extreme-value` | `mu`, `beta` | 0, 1 |
+| `beta` | `alpha`, `beta` | 2, 5 |
+| `binomial` | `n`, `p` | 10, 0.5 |
+| `poisson` | `lambda` | 5 |
+
+**CRITICAL: Switch case IDs must use the JSON `id` field exactly.** The existing distribution-curve.ts uses `case 't'` but the JSON ID is `t-distribution`. In this new module, use `case 't-distribution'` (matching the JSON).
+
 **Already-proven implementations to port (same math, different module):**
 - normal (erf-based)
 - exponential
@@ -92,19 +118,19 @@ export function isDiscrete(id: string): boolean
 
 **New implementations to add (13 distributions):**
 
-1. **cauchy**: PDF = 1/(pi*gamma*(1+((x-x0)/gamma)^2)), CDF = atan((x-x0)/gamma)/pi + 0.5
-2. **weibull**: PDF = (k/lambda)*(x/lambda)^(k-1)*exp(-(x/lambda)^k) for x>=0, CDF = 1-exp(-(x/lambda)^k)
-3. **lognormal**: PDF = (1/(x*sigma*sqrt(2*pi)))*exp(-(ln(x)-mu)^2/(2*sigma^2)) for x>0, CDF uses erf
-4. **fatigue-life** (Birnbaum-Saunders): PDF via normalPDF transform, CDF via normalCDF of z(x) = (1/gamma)*(sqrt(x/mu)-sqrt(mu/x))
-5. **double-exponential** (Laplace): PDF = (1/(2*beta))*exp(-|x-mu|/beta), CDF = piecewise
-6. **power-normal**: PDF = c*normalPDF(x)*normalCDF(x)^(c-1), CDF = normalCDF(x)^c
-7. **power-lognormal**: PDF = (c/(x*sigma))*normalPDF(z)*normalCDF(z)^(c-1) where z=(ln(x)-mu)/sigma, CDF = normalCDF(z)^c
-8. **extreme-value** (Gumbel): PDF = (1/beta)*exp(-(z+exp(-z))) where z=(x-mu)/beta, CDF = exp(-exp(-z))
-9. **beta**: PDF = (x^(a-1)*(1-x)^(b-1))/B(a,b) for x in [0,1], CDF = I_x(a,b) (regularizedBeta)
-10. **f-distribution**: PDF via gammaFn and power formula, CDF = I(d1*x/(d1*x+d2); d1/2, d2/2) using regularizedBeta
-11. **tukey-lambda**: Quantile function Q(F) = (F^lambda - (1-F)^lambda)/lambda. Special-case |lambda|<1e-10 as logistic: ln(F/(1-F)). PDF computed as f(x) = 1/Q'(F) where Q'(F) = F^(lambda-1) + (1-F)^(lambda-1). Generate curve by sweeping F from 0.001 to 0.999.
-12. **binomial** (discrete): PMF = C(n,k)*p^k*(1-p)^(n-k) using lnBinomialCoeff in log-space. CDF = sum of PMF for k=0..floor(x).
-13. **poisson** (discrete): PMF = exp(-lambda)*lambda^k/k! using lnGamma in log-space. CDF = sum of PMF for k=0..floor(x).
+1. **cauchy**: PDF = 1/(pi*gamma*(1+((x-x0)/gamma)^2)), CDF = atan((x-x0)/gamma)/pi + 0.5. Params: `x0`, `gamma`.
+2. **weibull**: PDF = (alpha/beta)*(x/beta)^(alpha-1)*exp(-(x/beta)^alpha) for x>=0, CDF = 1-exp(-(x/beta)^alpha). Params: `alpha` (shape), `beta` (scale). Note: alpha/beta naming per NIST convention used in distributions.json.
+3. **lognormal**: PDF = (1/(x*sigma*sqrt(2*pi)))*exp(-(ln(x)-mu)^2/(2*sigma^2)) for x>0, CDF uses erf. Params: `mu`, `sigma`.
+4. **fatigue-life** (Birnbaum-Saunders): PDF via normalPDF transform, CDF via normalCDF of z(x) = (1/alpha)*(sqrt(x/beta)-sqrt(beta/x)). Params: `alpha` (shape), `beta` (scale/location). Note: JSON uses alpha/beta, NOT gamma/mu.
+5. **double-exponential** (Laplace): PDF = (1/(2*beta))*exp(-|x-mu|/beta), CDF = piecewise. Params: `mu`, `beta`.
+6. **power-normal**: PDF = p*normalPDF(x)*normalCDF(x)^(p-1), CDF = normalCDF(x)^p. Param: `p` (power). Note: JSON uses `p`, NOT `c`.
+7. **power-lognormal**: PDF = (p/(x*sigma))*normalPDF(z)*normalCDF(z)^(p-1) where z=(ln(x))/sigma, CDF = normalCDF(z)^p. Params: `p` (power), `sigma`. Note: JSON uses `p` and `sigma` only (no `mu` parameter -- power-lognormal is parameterized with sigma only, ln(x)/sigma not (ln(x)-mu)/sigma).
+8. **extreme-value** (Gumbel): PDF = (1/beta)*exp(-(z+exp(-z))) where z=(x-mu)/beta, CDF = exp(-exp(-z)). Params: `mu`, `beta`.
+9. **beta**: PDF = (x^(a-1)*(1-x)^(b-1))/B(a,b) for x in [0,1], CDF = I_x(a,b) (regularizedBeta). Params: `alpha`, `beta`.
+10. **f-distribution**: PDF via gammaFn and power formula, CDF = I(d1*x/(d1*x+d2); d1/2, d2/2) using regularizedBeta. Params: `d1`, `d2`.
+11. **tukey-lambda**: Quantile function Q(F) = (F^lambda - (1-F)^lambda)/lambda. Special-case |lambda|<1e-10 as logistic: ln(F/(1-F)). PDF computed as f(x) = 1/Q'(F) where Q'(F) = F^(lambda-1) + (1-F)^(lambda-1). Generate curve by sweeping F from 0.001 to 0.999. Param: `lambda`.
+12. **binomial** (discrete): PMF = C(n,k)*p^k*(1-p)^(n-k) using lnBinomialCoeff in log-space. CDF = sum of PMF for k=0..floor(x). Params: `n`, `p`.
+13. **poisson** (discrete): PMF = exp(-lambda)*lambda^k/k! using lnGamma in log-space. CDF = sum of PMF for k=0..floor(x). Param: `lambda`.
 
 **New math helper functions:**
 - `regularizedBeta(x, a, b)`: Series expansion for x < (a+1)/(a+b+2), continued fraction (Lentz's method) otherwise. Follow identical pattern to lowerIncompleteGammaRatio. Needed by beta, f-distribution.
@@ -125,7 +151,27 @@ const dm = require('./src/lib/eda/math/distribution-math.ts' /* will need ts-nod
 " 2>&1 || npx tsx -e "
 import { evalDistribution, getXDomain, isDiscrete } from './src/lib/eda/math/distribution-math';
 const ids = ['normal','uniform','cauchy','t-distribution','f-distribution','chi-square','exponential','weibull','lognormal','fatigue-life','gamma','double-exponential','power-normal','power-lognormal','tukey-lambda','extreme-value','beta','binomial','poisson'];
-const defaults = {normal:{mu:0,sigma:1},uniform:{a:0,b:1},cauchy:{x0:0,gamma:1},'t-distribution':{nu:5},'f-distribution':{d1:5,d2:10},'chi-square':{k:4},exponential:{lambda:1},weibull:{k:1.5,lambda:1},lognormal:{mu:0,sigma:1},'fatigue-life':{gamma:0.5,mu:1},gamma:{alpha:2,beta:1},'double-exponential':{mu:0,beta:1},'power-normal':{c:2},'power-lognormal':{c:2,mu:0,sigma:1},'tukey-lambda':{lambda:0.14},'extreme-value':{mu:0,beta:1},beta:{alpha:2,beta:5},binomial:{n:20,p:0.5},poisson:{lambda:5}};
+const defaults: Record<string, Record<string, number>> = {
+  normal:{mu:0,sigma:1},
+  uniform:{a:-1,b:1},
+  cauchy:{x0:0,gamma:1},
+  't-distribution':{nu:5},
+  'f-distribution':{d1:5,d2:10},
+  'chi-square':{k:5},
+  exponential:{lambda:1},
+  weibull:{alpha:1,beta:1},
+  lognormal:{mu:0,sigma:1},
+  'fatigue-life':{alpha:1,beta:1},
+  gamma:{alpha:2,beta:1},
+  'double-exponential':{mu:0,beta:1},
+  'power-normal':{p:1},
+  'power-lognormal':{p:1,sigma:1},
+  'tukey-lambda':{lambda:0.14},
+  'extreme-value':{mu:0,beta:1},
+  beta:{alpha:2,beta:5},
+  binomial:{n:10,p:0.5},
+  poisson:{lambda:5}
+};
 let pass = 0;
 for (const id of ids) {
   const [lo,hi] = getXDomain(id, defaults[id]);
@@ -177,7 +223,27 @@ Refactor `src/lib/eda/svg-generators/distribution-curve.ts` to:
     <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npx tsx -e "
 import { generateDistributionCurve } from './src/lib/eda/svg-generators/distribution-curve';
 const ids = ['normal','uniform','cauchy','t-distribution','f-distribution','chi-square','exponential','weibull','lognormal','fatigue-life','gamma','double-exponential','power-normal','power-lognormal','tukey-lambda','extreme-value','beta','binomial','poisson'];
-const defaults = {normal:{mu:0,sigma:1},uniform:{a:0,b:1},cauchy:{x0:0,gamma:1},'t-distribution':{nu:5},'f-distribution':{d1:5,d2:10},'chi-square':{k:4},exponential:{lambda:1},weibull:{k:1.5,lambda:1},lognormal:{mu:0,sigma:1},'fatigue-life':{gamma:0.5,mu:1},gamma:{alpha:2,beta:1},'double-exponential':{mu:0,beta:1},'power-normal':{c:2},'power-lognormal':{c:2,mu:0,sigma:1},'tukey-lambda':{lambda:0.14},'extreme-value':{mu:0,beta:1},beta:{alpha:2,beta:5},binomial:{n:20,p:0.5},poisson:{lambda:5}};
+const defaults: Record<string, Record<string, number>> = {
+  normal:{mu:0,sigma:1},
+  uniform:{a:-1,b:1},
+  cauchy:{x0:0,gamma:1},
+  't-distribution':{nu:5},
+  'f-distribution':{d1:5,d2:10},
+  'chi-square':{k:5},
+  exponential:{lambda:1},
+  weibull:{alpha:1,beta:1},
+  lognormal:{mu:0,sigma:1},
+  'fatigue-life':{alpha:1,beta:1},
+  gamma:{alpha:2,beta:1},
+  'double-exponential':{mu:0,beta:1},
+  'power-normal':{p:1},
+  'power-lognormal':{p:1,sigma:1},
+  'tukey-lambda':{lambda:0.14},
+  'extreme-value':{mu:0,beta:1},
+  beta:{alpha:2,beta:5},
+  binomial:{n:10,p:0.5},
+  poisson:{lambda:5}
+};
 let pass = 0;
 for (const id of ids) {
   const pdf = generateDistributionCurve({ type: 'pdf', distribution: id, params: defaults[id] });
