--- a/.planning/phases/53-distribution-pages-with-d3-explorers/53-02-PLAN.md
+++ b/.planning/phases/53-distribution-pages-with-d3-explorers/53-02-PLAN.md
@@ -232,7 +232,7 @@ export async function getStaticPaths() {
 - `distributionUrl` from routes
   </action>
   <verify>
-    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npm run build 2>&1 | tail -10 && echo "--- Checking distribution pages ---" && ls dist/eda/distributions/normal/index.html dist/eda/distributions/beta/index.html dist/eda/distributions/binomial/index.html dist/eda/distributions/poisson/index.html dist/eda/distributions/tukey-lambda/index.html 2>&1 && echo "--- Checking page count ---" && ls dist/eda/distributions/*/index.html 2>/dev/null | wc -l</automated>
+    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npm run build 2>&1 | tail -10 && echo "--- Checking distribution pages ---" && ls dist/eda/distributions/normal/index.html dist/eda/distributions/beta/index.html dist/eda/distributions/binomial/index.html dist/eda/distributions/poisson/index.html dist/eda/distributions/tukey-lambda/index.html 2>&1 && echo "--- Checking page count ---" && COUNT=$(ls -d dist/eda/distributions/*/index.html 2>/dev/null | wc -l | tr -d ' ') && echo "Distribution pages: $COUNT" && [ "$COUNT" -eq 19 ] || { echo "FAIL: Expected 19 distribution pages, got $COUNT"; exit 1; }</automated>
     <manual>19 distribution pages exist in build output at /eda/distributions/{slug}/, each contains SVG fallback and DistributionExplorer island reference</manual>
   </verify>
   <done>19 distribution pages build at /eda/distributions/{slug}/ with static SVG fallbacks, DistributionExplorer client:visible island, KaTeX formulas, mean/variance properties, description, and related distribution links.</done>
@@ -255,7 +255,7 @@ export async function getStaticPaths() {
 - DistributionExplorer.tsx renders dual PDF+CDF D3 charts with real-time parameter slider updates
 - DistributionPage.astro provides slot-based template with breadcrumbs, JSON-LD, and EDALayout
 - [slug].astro generates all 19 pages via getStaticPaths from edaDistributions collection
-- npm run build produces 19 distribution page HTML files with no errors
+- npm run build produces exactly 19 distribution page HTML files with no errors
 - DIST-01 through DIST-17 requirements addressed
 </success_criteria>
 
